--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,12 +24,9 @@ push = false # Don't do `git push`.
 publish = false # Don't do `cargo publish`.
 
 [dependencies]
-shell-words = { version = "1", optional = true }
+shell-words = "1"
 tracing = { version = "0", optional = true }
-utf8-command = { version = "1", optional = true }
-
-[features]
-default = ["utf8-command", "shell-words", "tracing"]
+utf8-command = "1"
 
 [dev-dependencies]
 indoc = "2.0.4"
