--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,6 +24,7 @@ push = false # Don't do `git push`.
 publish = false # Don't do `cargo publish`.
 
 [dependencies]
+dyn-clone = "1.0.17"
 shell-words = "1"
 tracing = { version = "0", optional = true }
 utf8-command = "1"
