--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,6 +24,7 @@ push = false # Don't do `git push`.
 publish = false # Don't do `cargo publish`.
 
 [dependencies]
+process-wrap = { version = "8", features = ["std"], optional = true }
 dyn-clone = "1.0.17"
 shell-words = "1"
 tracing = { version = "0", optional = true }
@@ -33,3 +34,6 @@ utf8-command = "1"
 indoc = "2.0.4"
 pretty_assertions = "1.4.0"
 static_assertions = "1.1.0"
+
+[features]
+default = ["process-wrap"]
