--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,6 +29,7 @@ dyn-clone = "1.0.17"
 shell-words = "1"
 tracing = { version = "0", optional = true }
 utf8-command = "1"
+miette = { version = "7", default-features = false, optional = true }
 
 [dev-dependencies]
 indoc = "2.0.4"
