--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -8,6 +8,7 @@ on:
       - closed
     branches:
       - main
+  workflow_dispatch:
 
 name: Build and publish a release
 
@@ -15,19 +16,24 @@ jobs:
   # We make `if_merged` a `needs:` of the other jobs here to only run this
   # workflow on merged PRs.
   if_merged:
-    name: Check that PR was merged and not closed
-    if: github.event.pull_request.merged == true
-      && contains(github.event.pull_request.labels.*.name, 'release')
-    runs-on: ubuntu-latest
     permissions:
+      issues: write
       pull-requests: write
+    name: Check that PR was merged and not closed
+    if: github.event_name == 'workflow_dispatch'
+      || (
+        github.event.pull_request.merged == true
+        && contains(github.event.pull_request.labels.*.name, 'release')
+      )
+    runs-on: ubuntu-latest
     steps:
       - run: |
           echo "This is a canonical hack to run GitHub Actions on merged PRs"
           echo "See: https://docs.github.com/en/actions/using-workflows/events-that-trigger-workflows#running-your-pull_request-workflow-when-a-pull-request-merges"
 
       - name: Comment on PR with link to this action
-        uses: peter-evans/create-or-update-comment@v3
+        uses: peter-evans/create-or-update-comment@v4
+        if: github.event_name == 'pull_request'
         with:
           issue-number: ${{ github.event.pull_request.number }}
           body: |
@@ -43,14 +49,9 @@ jobs:
       version: ${{ steps.get_cargo_metadata.outputs.version }}
     steps:
       - name: Checkout code
-        uses: actions/checkout@v4
+        uses: actions/checkout@v5
 
-      - uses: cachix/install-nix-action@v22
-        with:
-          github_access_token: ${{ secrets.GITHUB_TOKEN }}
-          extra_nix_config: |
-            extra-experimental-features = nix-command flakes
-            accept-flake-config = true
+      - uses: cachix/install-nix-action@v31
 
       - name: Get version number
         id: get_cargo_metadata
@@ -64,20 +65,12 @@ jobs:
     # parts of the matrix (so we can have the macOS and Linux executables in
     # the next job).
     needs: if_merged
-    runs-on: ${{ matrix.os }}
-    strategy:
-      matrix:
-        os: [ubuntu-latest]
+    runs-on: ubuntu-latest
     steps:
       - name: Checkout code
-        uses: actions/checkout@v4
+        uses: actions/checkout@v5
 
-      - uses: cachix/install-nix-action@v22
-        with:
-          github_access_token: ${{ secrets.GITHUB_TOKEN }}
-          extra_nix_config: |
-            extra-experimental-features = nix-command flakes
-            accept-flake-config = true
+      - uses: cachix/install-nix-action@v31
 
       - name: Build documentation
         run: |
@@ -86,14 +79,13 @@ jobs:
           cp "$RESULT"/* target/
 
       - name: Upload documentation
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4
         with:
           name: documentation
           path: |
             target/*
 
       - name: Publish to crates.io
-        if: runner.os == 'Linux'
         env:
           CARGO_REGISTRY_TOKEN: ${{ secrets.CARGO_REGISTRY_TOKEN }}
         run: |
@@ -108,13 +100,15 @@ jobs:
       - version
     permissions:
       contents: write
+      issues: write
       pull-requests: write
     steps:
       - name: Tag the release
-        uses: mathieudutour/github-tag-action@v6.0
+        uses: mathieudutour/github-tag-action@v6.2
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          commit_sha: ${{ github.event.pull_request.merge_commit_sha }}
+          commit_sha: ${{ github.sha }}
+          # Note: This action automatically applies a prefix for us!
           custom_tag: ${{ needs.version.outputs.version }}
 
       - name: Download artifacts
@@ -130,11 +124,11 @@ jobs:
         #         path: target/release/ghciwatch-aarch64-linux
         #
         # will be downloaded to `linux/ghciwatch-aarch64-linux`.
-        uses: actions/download-artifact@v3
+        uses: actions/download-artifact@v5
 
       - name: Create release
         id: create_release
-        uses: softprops/action-gh-release@v1
+        uses: softprops/action-gh-release@v2.3.2
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
@@ -146,7 +140,8 @@ jobs:
             documentation/*
 
       - name: Comment on PR with link to the release
-        uses: peter-evans/create-or-update-comment@v3
+        uses: peter-evans/create-or-update-comment@v4
+        if: github.event_name == 'pull_request'
         with:
           issue-number: ${{ github.event.pull_request.number }}
           body: |
